feat: add links

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.4.0/milligram.css">
 </head>
 <body>
-    <h3>My Developer Blog</h3>
+    <div class="container">
+        <h3>My Developer Blog</h3>
+        <ul>
+            <li>Github: <a href="https://github.com/paules1">github.com/paules1</a></li>
+            <li>LinkedIn: <a href="https://www.linkedin.com/in/pvillacreces/">pvillacreces</a></li>
+        </ul>    
+    </div>
 </body>
 </html>
